--- a/index.html
+++ b/index.html
@@ -9,7 +9,10 @@
   </head>
   <body>
     <main class="main">
-      <h1>Matt.cat</h1>
+      <!-- <h1>Matt.cat</h1> -->
+      <div class="catDiv">
+        <img src="./cat.gif" alt="" class="cat" />
+      </div>
     </main>
   </body>
 </html>
